# finance-portfolio-agent

./: .eslintrc.json  .flake8  .gitignore  .mcp.yaml  .pre-commit-config.yaml  Dockerfile  PROJECT_PLAN.md  PROJECT_PLAN_PHASE1.md  PROJECT_PLAN_PHASE2.md  PROJECT_PLAN_PHASE3.md  PROJECT_PLAN_PHASE4.md  PROJECT_PLAN_PHASE5.md  README.md  config.py  config.yaml  mcp-server-config.json  mcp.yaml  package.json  pyproject.toml  real_portfolio_test.py  requirements.agent.txt  requirements.tinkoff.txt  requirements.txt  run_agent.py  setup.py  tailwind.config.js  test_agent.py  test_instruments.py  test_integration.py  test_market_data.py  test_mcp_agent.py  test_portfolio_info.py  test_tinkoff.py  tinkoff_agent.py
.github/: dependabot.yml
docs/: testing.md  tinkoff_integration.md
lovable/: package.json
lovable/src/services/: mcp.ts
mcp_finance_agent/: requirements.txt
migrations/: 20240320_create_notifications.sql  20240320_create_portfolio_snapshots.sql
src/: App.tsx  index.css
src/agent/: base.py  context.py  message_analyzer.py  message_handler.py  notifications.py  request_handler.py
src/agent/tasks/: portfolio_monitor.py  token_validator.py
src/agent/tools/: base.py  executor.py  portfolio.py  registry.py
src/components/auth/: AuthForm.tsx  ProtectedRoute.tsx
src/components/layout/: Header.tsx
src/components/notifications/: NotificationCenter.tsx
src/components/settings/: ConnectionManager.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useNotifications.ts  useUserConnections.ts
src/models/: base.py
src/pages/: auth.tsx
src/services/tinkoff/: cache.py  (+5 more)
src/utils/: security.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20240403_token_encryption.sql  20240403_user_connections.sql  20250402180916_new-migration.sql
tests/: conftest.py  test_agent_context.py  test_mcp_agent.py  test_mcp_agent_requests.py  test_message_handler.py  test_request_handler.py  test_tinkoff_integration.py
tests/agent/: test_context.py  test_message_analyzer.py  test_message_handler.py  test_registry.py
tests/integration/: conftest.py  test_message_flow.py
(+33 files in other folders)
